# n2n6

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  aes.c  aes.h  cc20.c  cc20.h  edge.c  n2n.c  n2n.h  n2n_keyfile.c  n2n_wire.h  random.h  sn.c  socks5.c  socks5.h  speck.c  speck.h  transform_aes.c  transform_cc20.c  transform_speck.c  transform_tf.c  twofish.c  upnp.c  wire.c
.github/workflows/: cd.yml
win32/: n2n_win32.h  wintap.c
